[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uaamd"
version = "0.1.0"
description = "Universal UAA-aware MD prep pipeline"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "biopython>=1.80",
    "MDAnalysis>=2.6.1",
    "numpy>=1.21.0",
    "PeptideBuilder>=1.1.0",
    "rdkit>=2023.9.5"
]

[project.scripts]
uaamd = "uaamd.cli.main:cli"

[tool.setuptools.packages.find]
include = ["uaamd*"]
